[package]
name = "viewy"
version = "0.0.0"
authors = ["Rémi Caillot <r.caillot@maformationofficinale.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "web"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/strowbeary/viewy-rs"
licence = "MIT"

[dependencies]
grass = "0.10.4"
minifier = "0.0"
serde = "1.0"
serde_json = "1.0"
markdown = "0.3"
html-escape = "0.2"

