[workspace]
resolver = "2"
members = ["viewy/lib", "viewy/codegen", "site"]

[workspace.lints.rust]
missing_docs = "forbid"

[workspace.package]
authors = ["Rémi Caillot <dev@remicaillot.fr>"]
version = "3.0.0-alpha.4"
rust-version = "1.89.0"
edition = "2024"
keywords = ["web", "user-interface", "declarative"]
description = "A web UI toolkit that combine the advantages of a design system and an ui library."
license = "MIT"
documentation = "https://docs.rs/viewy"
repository = "https://github.com/strowbeary/viewy-rs"


[profile.dev]
debug = true
