[package]
name = "viewy-cli"
authors.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true


publish = false

[dependencies]
syn = { version = "2.0", features = ["full", "visit-mut", "fold"] }
quote = "1.0"
proc-macro2 = "1.0"
walkdir = "2.3"
prettyplease = "0.2"
