[package]
name = "viewy-codegen"
version.workspace = true
authors.workspace = true
description = "Procedural macros for Viewy web ui library."
keywords = ["viewy", "web", "ui", "code", "generation"]
edition.workspace = true
readme = "../README.md"
repository = "https://github.com/strowbeary/viewy-rs"
license = "MIT"
documentation = "https://docs.rs/viewy"

[lib]
proc-macro = true

[dependencies]
