[package]
name = "viewy"
version = "1.8.5"
authors = ["Rémi Caillot <remicaillot5@gmail.com>"]
description = "A web UI toolkit that combine the advantages of a design system and an ui library."
keywords = ["web", "user-interface", "declarative"]
edition = "2021"
readme = "../README.md"
repository = "https://github.com/strowbeary/viewy-rs"
license = "MIT"
documentation = "https://docs.rs/viewy"

build = "build.rs"

[lib]
name = "viewy"
path = "src/lib.rs"

[dependencies]
grass = "0.12"
minifier = "0.2"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
markdown = "0.3"
html-escape = "0.2"
palette = "0.6"
uuid = { version = "1", features = ["v4"] }
dyn-clone = "1.0"
toml = "0.5"
hex = "0.4"
base64 = "0.13"
chrono = { version = "=0.4.22", features = ["serde"] }
chrono-tz = { version = "0.8", features = ["serde"] }
figment = { version = "0.10.10", features = ["toml", "env"]}

[build-dependencies]
heck = "0.4"
quote = "1.0"
scraper = "0.13"
figment = { version = "0.10.10", features = ["toml", "env"]}
serde = { version = "1.0", features = ["serde_derive"] }
git-download = "0.1"
cmd_lib = "1.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
heck = "0.4"
