[package]
name = "viewy"
version = "1.13.7"
authors = ["Rémi Caillot <remicaillot5@gmail.com>"]
description = "A web UI toolkit that combine the advantages of a design system and an ui library."
keywords = ["web", "user-interface", "declarative"]
edition = "2021"
readme = "../README.md"
repository = "https://github.com/strowbeary/viewy-rs"
license = "MIT"
documentation = "https://docs.rs/viewy"

build = "build.rs"

[lib]
name = "viewy"
path = "src/lib.rs"

[dependencies]
grass = "0.13"
minifier = "0.3"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
markdown = "0.3"
html-escape = "0.2"
palette = "0.7"
uuid = { version = "1", features = ["v4"] }
dyn-clone = "1.0"
toml = "0.8"
hex = "0.4"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.8", features = ["serde"] }
figment = { version = "0.10", features = ["toml", "env"]}
timeago = "0.4.2"
css-minify = "0.3.1"

[build-dependencies]
heck = "0.4"
quote = "1.0"
scraper = "0.18"
figment = { version = "0.10", features = ["toml", "env"]}
serde = { version = "1.0", features = ["serde_derive"] }
download_git = "0.0.2"
cmd_lib = "1.9"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
heck = "0.4"
