[package]
name = "viewy-site"
version = "1.7.2"
authors = ["Rémi Caillot <remicaillot5@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
viewy = { path = "../core/lib", features = ["rocket"] }
rocket = { version = "0.5.1", features = ["json", "secrets", "http2", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
