[package]
name = "viewy-site"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
viewy = { path = "../viewy/lib", features = ["rocket"] }
rocket = { version = "0.5.1", features = ["json", "secrets", "http2", "uuid"] }
