[package]
name = "viewy-site"
version.workspace = true
edition.workspace = true
publish = false
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
viewy = { path = "../lib" }
rocket = { version = "0.5.0", features = ["json", "secrets", "http2"]  }
chrono = { version = "0.4", features = ["serde"] }
