[package]
name = "viewy"
version = "1.5.10"
authors = ["Rémi Caillot <remicaillot5@gmail.com>"]
description = "A web UI toolkit that combine the advantages of a design system and an ui library."
keywords = ["web", "user-interface", "declarative"]
edition = "2021"
readme = "../../README.md"
repository = "https://github.com/strowbeary/viewy-rs"
license = "MIT"
documentation = "https://docs.rs/viewy"

[dependencies]
grass = "0.11"
minifier = "0.2"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
markdown = "0.3"
html-escape = "0.2"
palette = "0.6"
uuid = { version = "1", features = ["v4"] }
dyn-clone = "1.0"
toml = "0.5"
hex = "0.4"
base64 = "0.13"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
chrono_locale = "0.1"
chrono-tz = { version = "0.6", features = ["serde"] }
