[package]
name = "viewy"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
viewy-codegen = { version = "=2.0.0", path = "../codegen"}
uuid = {  version = "1.4.1", features = ["v4"]}
rocket = { version = "0.5.0-rc.3", optional = true }
figment = { version = "0.10.10", features = ["toml", "env"]}
grass = "0.13"
minifier = "0.2"
html-escape = "0.2"
serde = { version = "1.0", features = ["serde_derive"] }
palette = "0.7"
hex = "0.4"

[build-dependencies]
heck = "0.4"
quote = "1.0"
scraper = "0.13"
figment = { version = "0.10.10", features = ["toml", "env"]}

[features]
rich-text-area = []
sortable-stack = []
rocket = ["dep:rocket"]