[package]
name = "showcase"
version = "0.1.0"
authors = ["Rémi Caillot <remicaillot5@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
viewy = { path = "../../core/lib" }
proc-macro2 = "1.0.27"
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "5a4e66ec439411d30f16e5c045f8e4986f5883a4" }
