[package]
name = "viewy-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
description.workspace = true
readme = "../../README.md"
repository.workspace = true
license.workspace = true
documentation.workspace = true

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.32"
syn = "2.0.28"
