[package]
name = "viewy"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
description.workspace = true
readme = "../../README.md"
repository.workspace = true
license.workspace = true
documentation.workspace = true

build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
viewy-codegen = { version = "3.0.0-alpha.2", path = "../codegen" }
uuid = { version = "1.6", features = ["v4"] }
rocket = { version = "0.5.0", optional = true }
axum = { version = "0.8.6", optional = true }
figment = { version = "0.10", features = ["toml", "env"] }
grass = "0.13"
minifier = "0.3"
html-escape = "0.2"
serde = { version = "1.0", features = ["serde_derive"] }
palette = "0.7"
hex = "0.4"
strum = { version = "0.25.0", features = ["derive"] }
lazy_static = { version = "1.4.0", features = [] }
rayon = "1.8.1"
short-uuid = "0.1.2"
grass_compiler = "0.13"
futures = "0.3.31"
dyn-clone = "1.0"

[build-dependencies]
heck = "0.4"
quote = "1.0"
figment = { version = "0.10", features = ["toml", "env"] }
scraper = "0.24.0"
serde = { version = "1.0", features = ["serde_derive"] }
uuid = { version = "1.6", features = ["v4"] }

[features]
rich-text-area = []
sortable-stack = []
rocket = ["dep:rocket"]
axum = ["dep:axum"]
